# gamlr

./: Cargo.toml  README.md
.github/workflows/: bump-version.yml  rust.yml
src/: lib.rs  offset_estimator.rs
